--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Oyewole Monisola",
   "license": "ISC",
   "dependencies": {
-    "@mastra/core": "^0.23.1",
+    "@mastra/core": "^0.23.3",
     "@mastra/libsql": "^0.16.1",
     "@mastra/loggers": "^0.10.18",
     "@mastra/memory": "^0.15.9",
@@ -23,10 +23,10 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "mastra": "^0.17.7",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
     "@types/express": "^4.17.0",
-    "ts-node": "^10.9.0"
+    "@types/node": "^20.0.0",
+    "mastra": "^0.17.7",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   }
 }
